tests/ui/coercion/ptr-mutability-errors.stderr
error[E0308]: mismatched types
  --> $DIR/ptr-mutability-errors.rs:8:25
   |
LL |     let x: *mut isize = x;
   |            ----------   ^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
              found raw pointer `*const isize`

error[E0308]: mismatched types
  --> $DIR/ptr-mutability-errors.rs:14:25
   |
LL |     let x: *mut isize = &42;
   |            ----------   ^^^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
                found reference `&isize`

error[E0308]: mismatched types
  --> $DIR/ptr-mutability-errors.rs:20:25
   |
LL |     let x: *mut isize = x;
   |            ----------   ^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
              found raw pointer `*const isize`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
